[package]
name = "mpd-rs"
version = "0.1.0"
authors = ["Jonas <osannolik@godtycklig.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
#num = "0.3.0"
num-complex = "0.2"
num-traits = "0.2.12"
rustfft = "3.0.1"
