[package]
name = "mpd-rs"
version = "0.1.0"
authors = ["Jonas <osannolik@godtycklig.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
ndarray-rand = "0.11.0"
#num = "0.3.0"
num-complex = {version = "0.2", features = ["rand"]}
num-traits = "0.2.12"
rustfft = "3.0.1"
