[package]
name = "mpd-rs"
version = "0.1.0"
authors = ["Jonas <osannolik@godtycklig.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
lto = true

[dependencies]
ndarray = { version = "0.13.1", features = ["serde"] }
ndarray-rand = "0.11.0"
#num = "0.3.0"
num-complex = { version = "0.2", features = ["serde", "rand"] }
num-traits = "0.2.12"
rustfft = "3.0.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
